<resources>
    <string name="app_name">FakeGps</string>

    <string name="system_settings_title">System settings change required</string>
    <string name="system_settings_message">This application is not set as a default mocking location application.\nOpen \'Developer Options\'->\'Select mock location app\' and select FakeGps as mocking app. Finally restart FakeGps application.</string>
    <string name="system_setting_ok">Go to Developer options</string>
    <string name="system_setting_cancel">Cancel</string>

    <string name="permission_setting_message">This application requires permission to device\'s location. Please add it in application settings and restart FakeGps application</string>
    <string name="permission_setting_ok">Go to application settings</string>
    <string name="permission_setting_cancel">Cancel</string>

    <string name="activityMain_save_location">Save location</string>
    <string name="activityMain_save_empty_location">Unknown location</string>
    <string name="activityMain_save_location_error">An error occurred while saving location</string>
    <string name="activityMain_save_location_too_many">You can save up to %d locations. Remove old locations to continue</string>
    <string name="start">Start mocking</string>
    <string name="stop">Stop mocking</string>

    <string name="version">New app version available!. Please upgrade your app to continue.</string>
    <string name="close">Go to AppGallery</string>
    <string name="version_name">v. %s</string>
    <string name="ok">OK</string>

    <string name="menu_move">Mock movement</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_locations">Saved locations</string>
    <string name="menu_about">About</string>
    
    <string name="activityMove_move_title">Mock movement settings</string>
    <string name="activityMove_mock">Mock movement</string>
    <string name="activityMove_direction">Select move direction</string>
    <string name="activityMove_random">Random move</string>
    <string name="activityMove_advanced">Advanced move</string>
    <string name="activityMove_random_info">Location will change in random direction every %d sec</string>

    <string name="activitySettings_title">Settings</string>
    <string name="activitySettings_section1">Location settings</string>
    <string name="activitySettings_section2">Provider settings</string>
    <string name="activitySettings_interval">Update location interval (in sec)</string>
    <string name="activitySettings_sec">sec</string>
    <string name="activitySettings_accuracy">Accuracy (in meters)</string>
    <string name="activitySettings_gms">Mock Google Location</string>
    <string name="activitySettings_mgs_error">No Google Mobile Services detected</string>
    <string name="activitySettings_hms_error">No Huawei Mobile Services detected</string>
    <string name="activitySettings_hms">Mock Huawei Location</string>



    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_error">Value must be between 1 and %s</string>
    <string name="dialog_error2">Enter value between 1 and %s</string>
    <string name="dialog_location">Location name</string>
    <string name="dialog_error3">Name must not be empty</string>

    <string name="dialog_delete_location">Are you sure you want to delete location \'%s\'?</string>

    <string name="activityLocations_title">Saved locations</string>
    <string name="activityLocations_empty">You have no saved locations</string>
    <string name="activityLocations_error">An error occurred</string>
    <string name="activityLocations_try_again">Try again</string>


    <string name="activityAbout_title">About</string>
    <string name="activityAbout_version">2020 FakeGps v%s</string>
    <string name="activityAbout_s1">This software is designed to support the quality assurance process for mobile developers and testers.
        It helps to mock current user location provided by Huawei Mobile Services(HMS) and Google Mobile Services(GMS).
        Note: some mobile device models do not support HMS or GMS services and will not be able to run location mocking service. </string>
    <string name="activityAbout_s2">This software is provided without warranty of any kind. Use it at your own risk.
        Note that after using this software you may find your location locked at last mocked location. Please read our <a href="https://sites.google.com/view/fakegps-termsconditions/">Terms &amp; Conditions</a></string>
</resources>
