<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
            app:title="@string/activitySettings_title" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        style="@style/Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:padding="@dimen/padding_default"
        android:text="@string/activitySettings_interval"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer" />

    <EditText
        android:id="@+id/activitySettings_etInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:text="1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline" />


    <TextView
        android:id="@+id/textView5"
        style="@style/Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/activitySettings_accuracy"
        app:layout_constraintBottom_toBottomOf="@+id/activitySettings_etAccuracy"
        app:layout_constraintEnd_toStartOf="@+id/activitySettings_etAccuracy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activitySettings_etAccuracy" />

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/activitySettings_etAccuracy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        tools:text="5"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/activitySettings_etInterval" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/textView6"
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/activitySettings_gms"
        app:layout_constraintBottom_toBottomOf="@+id/activitySettings_sGms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activitySettings_sGms" />

    <Switch
        android:id="@+id/activitySettings_sGms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:padding="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySettings_etAccuracy" />



    <TextView
        android:id="@+id/activitySettings_tvGmsError"
        style="@style/Text.Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:text="@string/activitySettings_mgs_error"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default"
        android:text="@string/activitySettings_hms"
        app:layout_constraintBottom_toBottomOf="@+id/activitySettings_sHms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activitySettings_sHms" />
    <TextView
        android:id="@+id/activitySettings_tvHmsError"
        style="@style/Text.Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:text="@string/activitySettings_hms_error"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Switch
        android:id="@+id/activitySettings_sHms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="@dimen/padding_large"
        android:padding="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySettings_tvGmsError" />

</androidx.constraintlayout.widget.ConstraintLayout>