<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
            app:title="@string/activityMove_move_title" />

    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/activityMove_tvRandom"
        style="@style/Text.Normal"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/background_selected"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        android:text="@string/activityMove_random"
        android:textColor="@color/selectable_color"
        app:layout_constraintEnd_toStartOf="@+id/activityMove_tvAdvanced"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
        app:layout_constraintWidth_percent="0.5"
        tools:textColor="@color/colorBlack"
        tools:visibility="visible" />

    <Button
        android:id="@+id/activityMove_tvAdvanced"
        style="@style/Text.Normal"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/background_selected"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        android:text="@string/activityMove_advanced"
        android:textColor="@color/selectable_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activityMove_tvRandom"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
        app:layout_constraintWidth_percent="0.5"
        tools:textColor="@color/colorBlack"
        tools:visibility="visible"
        app:drawableStartCompat="@drawable/drawable_selected" />


    <TextView
        android:id="@+id/activityMove_tvRandomInfo"
        style="@style/Text.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/activityMove_random_info"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMove_tvRandom"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/activityMove_tvDirectionLabel"
        style="@style/Text.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/activityMove_direction"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMove_tvRandom"
        tools:visibility="visible" />

    <com.shauri.fakegps.view.CircleSelectorView
        android:id="@+id/activityMove_circleDirection"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMove_tvDirectionLabel"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>