<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:paddingBottom="@dimen/margin_medium">

    <View
        android:id="@+id/dialog_input_topLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_line"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/dialog_input_tvLabel"
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_topLine"
        android:text="@string/dialog_location" />

    <EditText
        android:id="@+id/dialog_input_etValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="25"
        android:focusedByDefault="true"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/dialog_location"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_tvLabel"
        app:layout_constraintWidth_percent="0.6" />


    <TextView
        android:id="@+id/dialog_input_tvError"
        style="@style/Text.Small"
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_etValue"
        android:text="@string/dialog_error3" />

    <View
        android:id="@+id/dialog_input_vHelper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_tvError" />

    <Button
        android:id="@+id/dialog_input_btnSave"
        style="@style/ButtonPositive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_save"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_input_btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_vHelper" />

    <Button
        android:id="@+id/dialog_input_btnCancel"
        style="@style/ButtonNegative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        app:layout_constraintEnd_toStartOf="@+id/dialog_input_btnSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_input_vHelper"
        app:layout_constraintWidth_percent="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>